# QuantStream

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  lint.yml  test.yml
config/: alerts.yml  prometheus.yml
config/grafana/dashboards/: api-performance.json  dashboards.yml  ingestion-overview.json  stream-health.json  system-health.json
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: daily_summary.sql  market_activity.sql  schema.yml  symbol_performance.sql  volatility_metrics.sql
dbt/models/staging/: sources.yml  stg_ohlc.sql  stg_trade_stats.sql  stg_volume_profiles.sql
docker/: Dockerfile.api  Dockerfile.ingestion  Dockerfile.spark
docs/: ARCHITECTURE.md  DEVELOPMENT.md  ROADMAP.md  RUNBOOK.md
docs/ADRs/: README.md
openspec/changes/quantstream-platform-foundation/: design.md  proposal.md  tasks.md
openspec/changes/quantstream-platform-foundation/specs/bronze-storage/: spec.md
openspec/changes/quantstream-platform-foundation/specs/ci-cd/: spec.md
openspec/changes/quantstream-platform-foundation/specs/data-quality/: spec.md
openspec/changes/quantstream-platform-foundation/specs/dbt-transforms/: spec.md
scripts/: create_topics.sh
src/quantstream/api/: app.py  main.py  metrics.py
src/quantstream/api/routes/: analytics.py  health.py  trades.py
src/quantstream/data_quality/: cli.py  suites.py  validator.py
src/quantstream/ingestion/: client.py  main.py
src/quantstream/observability/: logging.py
src/quantstream/schemas/: envelope.py  models.py  registry.py  serialization.py  trade.py
src/quantstream/storage/: compaction.py  writer.py
src/quantstream/streaming/: aggregations.py  config.py  main.py  pipeline.py  transforms.py
tests/contract/: test_bronze_schema.py
tests/integration/: test_ingestion_integration.py  test_streaming_integration.py
tests/unit/: test_aggregations.py  test_api.py  test_config.py  test_data_quality.py  test_ingestion.py  test_schemas.py  test_storage.py  test_streaming.py  test_transforms.py
(+9 files in other folders)
